@@ -311,6 +311,7 @@ SHOWDAMAGE=NO
 # COMBAT-NOUN        Include a level-based combat/attack noun.
 # *
 # Include SKILL-PROFICIENCY to show words instead of skill proficiency numbers
+# Include STAT-PROFICIENCY to show words instead of char stat numbers
 # Set the value to NONE to include none of the options above.
 # Set the value to BLANK to default to ARMOR-ABSOLUTE, ARMOR-NUMBER, 
 #    COMBAT-ABSOLUTE, COMBAT-NUMBER
