@@ -495,7 +495,24 @@ HEALTH_CHART=\
     ^g<MOB>^g has a few bruises and scratches.^N,\
     ^g<MOB>^g has a few small bruises.^N,\
     ^c<MOB>^c is in perfect health.^N
-    
+
+# CHARSTAT_CHART showing descriptive names for character stats like
+# strength, intelligence, etc.  From 0 on up
+CHARSTAT_CHART=\
+disabled, feeble, feeble, \
+inferior, inferior, inferior, \
+below average, below average, below average, \
+average, average, average, \
+above average, above average, above average, \
+good, good, good, \
+excellent, excellent, excellent, \
+exceptional, exceptional, exceptional, \
+superior, superior, superior, \
+incredible, incredible, incredible, \
+fantastical, fantastical, fantastical, \
+ungodly
+
+
 # EXP_CHART is the experience thresholds for player levels.
 # For levels after the last entry in this list, the amount of experience
 # required will be extrapolated based on the final two entries on this list.
