@@ -42,6 +42,7 @@
   40. Faction Change Events can now trigger gains of XP or RolePlay XP, and have a % chance
   41. New common skills: Master Floristry, Ship Lore
   42. New mob type: GenCow -- the drinkable, rideable, mob
+  43. PROWESSOPTIOS and the LISTFILE can now be used to show char stats as words.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
